# DeSiGNAR

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
.github/workflows/: build_library.yml
cmake/: CompilerWarnings.cmake  Config.cmake  DesignarConfig.cmake.in  Macros.cmake
include/Designar/: array.hpp  bitset.hpp  buildgraph.hpp  containeralgorithms.hpp  geometricalgorithms.hpp  graph.hpp  graphalgorithms.hpp  graphutilities.hpp  hash.hpp  heap.hpp  intutilities.hpp  italgorithms.hpp  iterator.hpp  list.hpp  map.hpp  math.hpp  nodesdef.hpp  now.hpp  point2D.hpp  polygon.hpp  queue.hpp  random.hpp  range.hpp  relation.hpp  segment.hpp  set.hpp  setalgorithms.hpp  sort.hpp  stack.hpp  stringutilities.hpp  tree.hpp  triangle.hpp  types.hpp  vector2D.hpp
samples/: CMakeLists.txt
samples/src/: demo-buildgraph.cpp  demo-concurrentqueue.cpp  demo-graph-components.cpp  demo-graph-mincut.cpp  demo-graph.cpp  demo-iterators.cpp  demo-range.cpp  demo-topological_sort.cpp
src/: CMakeLists.txt  array.cpp  bitset.cpp  buildgraph.cpp  containeralgorithms.cpp  geometricalgorithms.cpp  graph.cpp  graphalgorithms.cpp  graphutilities.cpp  hash.cpp  heap.cpp  intutilities.cpp  italgorithms.cpp  iterator.cpp  list.cpp  map.cpp  math.cpp  nodesdef.cpp  now.cpp  point2D.cpp  polygon.cpp  queue.cpp  random.cpp  range.cpp  relation.cpp  segment.cpp  set.cpp  setalgorithms.cpp  sort.cpp  stack.cpp  stringutilities.cpp  tree.cpp  triangle.cpp  types.cpp  typetraits.cpp  vector2D.cpp
tests/: CMakeLists.txt
tests/src/: test-array.cpp  test-bitset.cpp  test-dllist.cpp  test-graph-cycles.cpp  test-hash.cpp  test-heap.cpp  test-in-out-graph.cpp  test-intutilities.cpp  test-map.cpp  test-mtreenode.cpp  test-pow.cpp  test-queue.cpp  test-random.cpp  test-range.cpp  test-relation.cpp  test-sllist.cpp  test-stack.cpp  test-stringutilities.cpp  test-tree.cpp  test-vector2D.cpp
tools/pkg-config/: designar.pc.in
